--- a/SOPManagement/Views/Home/SignSOP.cshtml
+++ b/SOPManagement/Views/Home/SignSOP.cshtml
@@ -388,7 +388,7 @@
 
         if (ownerchk == null && aprvrchk == null && rvwrchk == null) {
 
-            alert("The SOP is signed by all signatories.");
+            alert("You have already signed of the SOP.");
             document.getElementById("chksignAgrmnt").checked = false;
             return false;
 
