--- a/SOPManagement/Views/Home/AdminSOP.cshtml
+++ b/SOPManagement/Views/Home/AdminSOP.cshtml
@@ -4,7 +4,7 @@
 @{
 
 
-    TempData["PageTitle"]= "SOP Admin";
+    TempData["PageTitle"] = "SOP Admin";
     Session["ShowTitle"] = "yes";
 
 
@@ -451,11 +451,19 @@
 
 </div>
 
+
 <div class="submit-progress hidden" id="progessdiv">
-    <img src="~/Content/Images/soploading.gif" style="width:55px;height:55px" />
-    @*<i class="fa fa-2x fa-spinner fa-spin"></i>
-        <label>Please wait while submitting SOP...</label>*@
-    <label>Please wait while submitting SOP...</label>
+
+    <div class="row">
+        <div class="col-md-3">
+            <img src="~/Content/Images/soploading.gif" style="width:55px;height:55px" />
+        </div>
+        <div class="col-md-9">
+            <h5> Please wait while submitting SOP Changes... </h5>
+        </div>
+    </div>
+
+
 </div>
 
 
@@ -473,33 +481,87 @@
 <script type="text/javascript" src="http://ajax.cdnjs.com/ajax/libs/json2/20110223/json2.js"></script>
 
 
-<script src="~/Scripts/SOP.js"></script>
+@*<script src="~/Scripts/SOP.js"></script>*@
 
 <script>
 
 
-    $("body").on("submit", "#Form2", function () {
-        return confirm("Are you sure you want to archive this SOP?");
-    });
+    //$("body").on("submit", "#Form2", function () {
+    //    return confirm("Are you sure you want to archive this SOP?");
+    //});
+
+    //window.confirm = function (message) {
+    //    var myElementToShow = document.getElementById("sopalert");
+
+    //    var myAlertToShow = document.getElementById("sopalertmsg");
+
+    //    myAlertToShow.innerHTML = '</br>' + message + "</br></br>" + "<input type='button' value='OK' id='btnalertok' onclick='closealertok()' />" + "&nbsp" + "&nbsp" + "&nbsp" + "&nbsp" + "&nbsp" + "&nbsp" + "<input type='button' value='Cancel' id='btnalertcan' onclick='closealertcan()' />";
+
+    //    myElementToShow.style.display = "block";
+    //}
 
 
 
 
-    function confirmsave() {
+        function confirmsave() {
 
-        var answer = window.confirm("Are you sure to change all SOP admin data?")
-        if (answer) {
+            //confirmmsg('Test');
+
+           // window.confirm("Are you sure to change all SOP admin data?");
+
+            window.confirm("Are you sure to change all SOP admin data?",
+                function () {
+                    // Do something for yes
+
+                    submitchanges();
+                  //  alert('clicked OK');
+
+                },
+                function () {
+                    // Do something for no
+                    //alert('clicked Cancel');
+                }
+            );
 
 
-            submitchanges();
+          //  alert(document.getElementById("cinfirmmsg").value);
 
-            return false;
+            //if (answer) {
+
+
+            //    submitchanges();
+
+            //    return false;
+            //}
+            //else {
+
+            //    return true;
+            //}
         }
-        else {
 
-            return true;
-        }
-    }
+
+
+    //function closealertok() {
+
+    //    var myElementToShow = document.getElementById("sopalert");
+
+    //    myElementToShow.style.display = "none";
+
+    //  //  alert('ok called');
+
+    //    submitchanges();
+
+    //    //return true;
+    //}
+
+    //function closealertcan() {
+
+    //    var myElementToShow = document.getElementById("sopalert");
+    //    myElementToShow.style.display = "none";
+    //   // alert('cancel called');
+
+    //}
+
 
 
     function submitchanges()
@@ -579,7 +641,7 @@
 
         if (reviewerarr === undefined || reviewerarr.length == 0) {
             // array empty or does not exist
-            alert("Reviewers are required, plesae add at least one reviewer!");
+            alert("Reviewers are required, please add at least one reviewer!");
             return true;
         }
 
@@ -614,7 +676,7 @@
 
             if (vwrdeptcode == "" && (viewersarr === undefined || viewersarr.length == 0)) {
                 // array empty or does not exist
-                alert("Plesae enter at least one viewer with read access!");
+                alert("Please enter at least one viewer with read access!");
                 return true;
             }
 
@@ -715,6 +777,270 @@
 
         return true;
     }
+
+
+
+
+
+
+    $("body").on("click", "#btnAddRvwer", function () {
+
+
+        //Get the reference of the Table's TBODY element.
+
+        var tBody = $("#tblReviewers > TBODY")[0];
+
+
+
+        var eml = $('#ddlEmployees').val();
+
+
+        var f = searchtable(eml, 'tblReviewers');
+
+
+        if (f != '') {
+
+            alert('already added');
+            return;
+
+        }
+
+        //Add Row.
+
+        var row = tBody.insertRow(-1);
+
+        //Add Name cell.
+
+        var cell = $(row.insertCell(-1));
+
+
+        cell.html($('#ddlEmployees :selected').text());
+
+
+        //Add Country cell.
+
+        cell = $(row.insertCell(-1));
+
+        cell.html($('#ddlEmployees').val());
+
+        //Add Button cell.
+
+        cell = $(row.insertCell(-1));
+
+        var btnRemoveRvr = $("<input />");
+
+        btnRemoveRvr.attr("type", "button");
+
+        btnRemoveRvr.attr("onclick", "Remove(this,'#tblReviewers');");
+
+        btnRemoveRvr.val("Remove");
+
+        cell.append(btnRemoveRvr);
+
+
+    });
+
+
+    $("body").on("click", "#btnAddVwer", function () {
+
+        //Reference the Name and Country TextBoxes.
+
+
+        var txtName = $("#txtName");
+
+        var txtEmail = $("#txtEmail");
+
+        var txtEmail = $('#ddlViewers').val();
+
+
+        //To get the currently selected text:
+        // $('#dropDownId :selected').text();
+
+
+
+        //Get the reference of the Table's TBODY element.
+
+        var tBody = $("#tblViewers > TBODY")[0];
+
+
+        var eml = $('#ddlViewers').val();
+
+        var f = searchtable(eml, 'tblViewers');
+
+
+
+        // document.getElementById("ddlEmployees").contains(eml);
+
+        if (f != '') {
+
+            alert('already added');
+            return;
+
+        }
+
+        //Add Row.
+
+        var row = tBody.insertRow(-1);
+
+
+
+        //Add Name cell.
+
+        var cell = $(row.insertCell(-1));
+
+        cell.html($('#ddlViewers :selected').text());
+
+
+        //Add Country cell.
+
+        cell = $(row.insertCell(-1));
+
+        cell.html($('#ddlViewers').val());
+
+
+
+        //Add Button cell.
+
+        cell = $(row.insertCell(-1));
+
+        var btnRemoveVwr = $("<input />");
+
+        btnRemoveVwr.attr("type", "button");
+
+        btnRemoveVwr.attr("onclick", "Remove(this,'#tblViewers');");
+
+        btnRemoveVwr.val("Remove");
+
+        cell.append(btnRemoveVwr);
+
+
+
+        //Clear the TextBoxes.
+
+        txtName.val("");
+
+
+    });
+
+
+    function searchtable(eml, tblname) {
+
+        var tab = document.getElementById(tblname);
+        var l = tab.rows.length;
+        var s = '';
+        for (var i = 0; i < l; i++) {
+            var tr = tab.rows[i];
+            var cll = tr.cells[1];
+
+            if (cll.innerText.indexOf(eml) != -1) {
+                //document.write(i + 1);
+
+                s = 'found';
+                break;
+            }
+        }
+
+        return s;
+
+    }
+
+    function Remove(button, tableid) {
+
+        //Determine the reference of the Row using the Button.
+
+        window.clearTimeout(window.timeoutHandle);
+        window.timeoutHandle = window.setTimeout("SessionEnd()", window.sTimeout);
+
+        var row = $(button).closest("TR");
+
+        var name = $("TD", row).eq(0).html();
+
+        window.confirm("Do you want to delete: " + name,
+            function () {
+                // Do something for yes
+
+                // alert('clicked OK');
+                var table = $(tableid)[0];
+
+                //Delete the Table row using it's Index.
+
+                table.deleteRow(row[0].rowIndex);
+
+
+            },
+            function () {
+                // Do something for No
+                // alert('clicked Cancel');
+            }
+        );
+
+
+
+
+        //   if (confirm("Do you want to delete: " + name)) {
+
+        //            //Get the reference of the Table.
+
+        //            // var table = $("#tblReviewers")[0];
+
+        //            var table = $(tableid)[0];
+
+
+
+        //    //Delete the Table row using it's Index.
+
+        //    table.deleteRow(row[0].rowIndex);
+
+        //}
+
+    };
+
+
+
+    function DisplayProgressMessage(ctl, msg) {
+
+        $(ctl).prop("disabled", true).text(msg);
+        $(".submit-progress").removeClass("hidden");
+        $("body").addClass("submit-progress-bg");
+        setTimeout(function () {
+            $(".submit-progress").removeClass("hidden");
+        }, 1);
+
+        return true;
+    }
+
+
+    function hasAlpha(str) {
+        var code, i, len;
+
+        for (i = 0, len = str.length; i < len; i++) {
+            code = str.charCodeAt(i);
+            if (code > 64 && code < 91)  // upper alpha (A-Z)
+                return true;
+        }
+        return false;
+    };
+
+
+    function isAlphaNumeric(str) {
+        var code, i, len;
+
+        for (i = 0, len = str.length; i < len; i++) {
+            code = str.charCodeAt(i);
+            if (!(code > 47 && code < 58) && // numeric (0-9)
+                !(code > 64 && code < 91) && // upper alpha (A-Z)
+                !(code > 96 && code < 123)) { // lower alpha (a-z)
+                return false;
+            }
+        }
+        return true;
+    };
+
+    function zeroPad(num, places) {
+        var zero = places - num.toString().length + 1;
+        return Array(+(zero > 0 && zero)).join("0") + num;
+    };
+
 
 
 
